<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="207dp"
        android:layout_height="41dp"
        android:hint="@string/select_a_movie"
        android:completionThreshold="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Back"
        android:layout_width="93dp"
        android:layout_height="43dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="MissingConstraints" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="65dp"
        android:background="#D0000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:tooltipText="@string/search"
        app:title="Search"

        app:titleMarginStart="150dp"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="3dp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#E30F0F"
        android:backgroundTint="#B7000000"
        android:textColor="@color/white"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

</androidx.constraintlayout.widget.ConstraintLayout>