<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    app:cardBackgroundColor="@color/white"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:background="#D0000000">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.237"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.629"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/MovieId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="337dp"
            tools:layout_editor_absoluteY="65dp" />

        <ImageView
            android:id="@+id/movie_cover"
            android:layout_width="85dp"
            android:layout_height="91dp"
            android:contentDescription="@string/photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/MovieName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:text="@string/moviename"
            android:textColor="#FF0000"
            android:textSize="16sp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="13dp" />

        <TextView
            android:id="@+id/MovieDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textColor="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/Avg_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MoviePopular"
            android:textColor="#FF0000"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.633"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>